# boltzkit

./: .gitignore  README.md  environment.yaml  pyproject.toml  requirements.txt  requirements_test.txt  setup.py
.github/workflows/: docs.yaml  run-tests.yaml
boltzkit/evaluation/: __init__.py  eval.py  molecular_eval.py
boltzkit/evaluation/density_based/: __init__.py  divergence.py  entropy.py  ess.py  evidence.py
boltzkit/evaluation/energy_based/: __init__.py  divergence.py
boltzkit/molecular/: openmm_energy.py
boltzkit/molecular_utils/: augmentation.py  boltzmann.py
boltzkit/targets/: _jax.py  _np.py  _torch.py  base.py  boltzmann.py  molecular.py
boltzkit/utils/: cached_repo.py  dataloader.py  dataset.py  framework.py  histogram.py  key_value_store.py  openmm.py  pdf.py  plot_molecule.py  shape_utils.py  visualize.py
demos/: create_dispatched_target.py  create_numpy_target.py
docs/source/: conf.py  contribute.rst  evaluation.rst  index.rst  installation.rst  targets.rst
docs/sphinx_extensions/: target_matrix.py
notebooks/: inspect_pdb.ipynb  minimize_energy.ipynb
tests/: test_boltzmann.py  test_cache_load_data.py  test_cached_repo_dataset_loader.py  test_gmm_consistency.py  test_gmm_load_dataset.py  test_make_agnostic.py
tools/: create_dataset.py  create_tica_model.py  evaluate_offline.py  extract_trajectory_as_numpy.py  offline_eval.py  permute_trajectory.py  run_simulation.py  split_trajectory.py
tools/_simulation/: h5_append.py  numpy_append.py  observables_hook.py  status_hook.py  trajectory_recording_hook.py  wandb_hook.py
(+83 files in other folders)
